fix: Fixed Chart Sizing on Mobile
The bar graphs were not displaying properly on mobile.

--- a/static/css/styling.css
+++ b/static/css/styling.css
@@ -55,3 +55,7 @@ label{
     visibility: hidden;
     display: none;
 }
+
+#gameChart{
+    height: 200px
+}
